--- a/config/rofi.conf
+++ b/config/rofi.conf
@@ -13,4 +13,4 @@ rofi.font:              Monospace 12
 !rofi.modi:              keys,drun,window,run
 !rofi.sidebar-mode:      true
 rofi.fullscreen:        false
-!apply changes: xrdb -load ~/.Xresources'
+!apply changes: xrdb -load ~/.Xresources
