--- a/postinstall-files/terminator.conf
+++ b/postinstall-files/terminator.conf
@@ -16,13 +16,14 @@
 [plugins]
 [profiles]
   [[default]]
-    background_color = "#353e4b"
-    background_darkness = 0.9
+    background_color = "#121b24"
+    background_darkness = 0.8
     background_type = transparent
     cursor_color = "#6ab3b3"
     cursor_color_fg = False
     font = Monospace 10
-    foreground_color = "#eeeeec"
+    foreground_color = "#add8e6"
+    palette = "#555753:#b44444:#5ecb8c:#d9c964:#3d6aac:#9a64d9:#64d9d5:#d3d7cf:#babdb6:#cc0000:#13b9b9:#d9cf8f:#729fcf:#b08fd9:#8fd9d5:#eeeeec"
     scrollback_infinite = True
     scrollback_lines = 5000
     scrollbar_position = hidden
