--- a/postinstall-files/terminator.config
+++ b/postinstall-files/terminator.config
@@ -23,7 +23,7 @@
     cursor_color_fg = False
     font = Monospace 10
     foreground_color = "#ecfefe"
-    palette = "#555753:#b44444:#5ecb8c:#d9c964:#3d6aac:#9a64d9:#64d9d5:#d3d7cf:#babdb6:#cc0000:#13b9b9:#d9cf8f:#729fcf:#b08fd9:#8fd9d5:#eeeeec"
+    palette = "#555753:#b44444:#5ecb8c:#d9c964:#3d6aac:#9a64d9:#64d9d5:#d3d7cf:#babdb6:#ef2929:#73d216:#d9cf8f:#729fcf:#b08fd9:#61e3e3:#eeeeec"
     scrollback_infinite = True
     scrollback_lines = 5000
     scrollbar_position = hidden
