--- a/postinstall-files/.conkyrc
+++ b/postinstall-files/.conkyrc
@@ -85,7 +85,7 @@ conky.config = {
     draw_outline = false,-- amplifies text if true
     default_outline_color = '000000',
 
-default_color='fefefe', -- Beam green
+default_color='dddddd', -- Beam green
 --default_color = '656667', -- Waldorf original colour
 --default_color = '7a7a7a', -- Flame  & BunsenLabs Grey
 --default_color = '929292', -- BunsenLabs Grey
