--- a/postinstall-files/terminator.config
+++ b/postinstall-files/terminator.config
@@ -16,8 +16,8 @@
 [plugins]
 [profiles]
   [[default]]
-    background_color = "#000000"
-    background_darkness = 0.7
+    background_color = "#2e3436"
+    background_darkness = 0.95
     background_type = transparent
     cursor_color = "#6ab3b3"
     cursor_color_fg = False
