--- a/postinstall-files/terminator.config
+++ b/postinstall-files/terminator.config
@@ -16,7 +16,7 @@
 [plugins]
 [profiles]
   [[default]]
-    background_color = "#2e3436"
+    background_color = "#212121"
     background_darkness = 0.95
     background_type = transparent
     cursor_color = "#6ab3b3"
