--- a/postinstall-files/.conkyrc
+++ b/postinstall-files/.conkyrc
@@ -193,11 +193,12 @@ S H O R T C U T    K E Y S
 ${hr}
 Win${alignr}Launcher
 Alt + Tab${alignr}Window switch
+Ctl + Kp_Num${alignr}Half maximize window
 Win + t${alignr}Terminal
 Win + f${alignr}File Manager
+Win + w${alignr}Web Browser
 Win + e${alignr}Editor
 Win + m${alignr}Media Player
-Win + w${alignr}Web Browser
 Win + h${alignr}Task Manager
 Win + l${alignr}Lock Screen
 Win + x${alignr}Logout
