--- a/postinstall-files/physlock.service
+++ b/postinstall-files/physlock.service
@@ -6,7 +6,7 @@
   User=root
   Type=forking
   Environment=DISPLAY=:0
-  ExecStart=/usr/bin/physlock -dm
+  ExecStart=/usr/bin/physlock -d
 
   [Install]
   WantedBy=sleep.target
