--- a/config_tty-login-neofetch/physlock.service
+++ b/config_tty-login-neofetch/physlock.service
@@ -6,7 +6,7 @@ Before=sleep.target
 User=root
 Type=forking
 Environment=DISPLAY=:0
-ExecStart=/usr/bin/physlock -d
+ExecStart=/usr/bin/physlock -ds
 
 [Install]
 WantedBy=sleep.target
